--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/config" : "*",
         "symfony/finder" : "*",
         "pimple/pimple" : "~3.0",
+        "twig/twig" : "~1.0",
         "illuminate/support": "*",
         "illuminate/database": "~4.2",
         "fzaninotto/faker": "*"
