--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
     ],
     "require": {
         "symfony/console": "~3.0",
+        "symfony/finder": "~3.0",
+        "symfony/yaml"  : "~3.0",
+        "symfony/filesystem": "~3.0",
         "twig/twig" : "~1.24",
-        "illuminate/database": "~5.2",
+        "doctrine/dbal" : "~2.5",
         "fzaninotto/faker": "~1.6"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.0.*",
-        "mockery/mockery" : "*"
+        "phpunit/phpunit": "~4.8"
     },
     "autoload": {
         "psr-4": {
