--- a/database/migrations/002_create_child.yml
+++ b/database/migrations/002_create_child.yml
@@ -5,17 +5,12 @@
 UP: >
 
     CREATE TABLE `child` (
-    `id` int(11) NOT NULL,
+    `id` int(11) NOT NULL AUTO_INCREMENT PRIMARY KEY ,
     `parent_id` int(11) NOT NULL,
-    `name` varchar(200) COLLATE utf8_unicode_ci NOT NULL,
+    `name` varchar(200) NOT NULL
     ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
-
-    ALTER TABLE `child` ADD KEY `id` (`id`);
-
-    ALTER TABLE `child` CHANGE `id` `id` INT(11) NOT NULL AUTO_INCREMENT;
-
 
 # Reverse the migration
 DOWN: >
 
-    DROP TABLE child;
+    DROP TABLE `child`;
