added groovey migration

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "illuminate/database" : "~5.2",
         "illuminate/events": "~5.2",
         "twig/twig" : "~1.24",
-        "fzaninotto/faker": "~1.6"
+        "fzaninotto/faker": "~1.6",
+        "groovey/migration": "dev-master"
     },
     "autoload": {
         "psr-4": {
