--- a/database/migrations/001_create_users.yml
+++ b/database/migrations/001_create_users.yml
@@ -4,13 +4,13 @@
 # Run the migration
 UP: >
 
-    CREATE TABLE `child` (
+    CREATE TABLE `users` (
     `id` int(11) NOT NULL AUTO_INCREMENT PRIMARY KEY ,
-    `parent_id` int(11) NOT NULL,
     `name` varchar(200) NOT NULL
     ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
+
 
 # Reverse the migration
 DOWN: >
 
-    DROP TABLE `child`;
+    DROP TABLE `users`;
