--- a/database/migrations/002_create_posts.yml
+++ b/database/migrations/002_create_posts.yml
@@ -4,13 +4,14 @@
 # Run the migration
 UP: >
 
-    CREATE TABLE `parent` (
+    CREATE TABLE `posts` (
     `id` int(11) NOT NULL AUTO_INCREMENT PRIMARY KEY ,
-    `name` varchar(200) NOT NULL
+    `user_id` int(11) NOT NULL,
+    `title` varchar(255) NOT NULL,
+    `content` TEXT NOT NULL
     ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
-
 
 # Reverse the migration
 DOWN: >
 
-    DROP TABLE `parent`;
+    DROP TABLE `posts`;
