--- a/database/migrations/001_create_users.yml
+++ b/database/migrations/001_create_users.yml
@@ -7,7 +7,7 @@ up: >
     CREATE TABLE `users` (
     `id` int(11) NOT NULL AUTO_INCREMENT PRIMARY KEY ,
     `name` varchar(200) NOT NULL
-    ) ENGINE=InnoDB DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
+    ) ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
 # Reverse the migration
 down: >
