--- a/database/migrations/001.yml
+++ b/database/migrations/001.yml
@@ -1,6 +1,6 @@
 date: '2016-06-26 17:27:05'
 author: Groovey
-description: User information
+changelog: User information.
 
 up: >
 
@@ -9,7 +9,6 @@ up: >
     `name` varchar(200) NOT NULL
     ) ENGINE=MyISAM DEFAULT CHARSET=utf8 COLLATE=utf8_unicode_ci;
 
-# Reverse the migration
 down: >
 
     DROP TABLE `users`;
